minor onclick update

--- a/index.htm
+++ b/index.htm
@@ -320,7 +320,7 @@
                     <td rowspan="2">
                         <input id="startButton" onClick="window.location.reload()" class="blue_button" type="button" value="New Game" />&nbsp;
                         <input id="validateButton" class="blue_button" type="button" value="Validate" />&nbsp;
-                        <input id="cheatButton" onClick="cheat()" class="blue_button" type="button" value="Cheat" />&nbsp;
+                        <input id="cheatButton" class="blue_button" type="button" value="Cheat" />&nbsp;
                     </td>                    
                 </tr>
                 <tr>
